2006-07-14  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c: Respect ISO C90 standard (mainly move
	declarations to beginning of functions).

2006-07-14  Ethan A Merritt <merritt@u.washington.edu>

	* term/post.trm (PS_dump_prologue_file): Try harder to expand short
	file name into legal VMS or Windows path+file. Give more informative
	error messages if the file cannot be found.

2006-07-14  Juergen Wieferink  <wieferink@freenet.de>

	* src/eval.c (fill_gpval_string): Remove cast to (char *) by correcting
	a dereference of the string value.

2006-07-13  Juergen Wieferink  <wieferink@freenet.de>

	* src/eval.c (fill_gpval_string): Do not risk calling gpfree_string
	on uninitialized udv.

	* src/eval.c (update_gpval_variables): Treat GPVAL_TERM just like all
	the other GPVAL_* variables.

	* standard.c standard.h (f_exists): Allow to compile with 
	./configure --disable-stringvariables

2006-07-12  Ethan A Merritt <merritt@u.washington.edu>

	* configure.in:  Enable HIDDEN3D_QUADTREE by default.

	* term/post.trm (PS_linetype): Additional optimization from not
	forced an absolute move if the linetype change has been optimized away.

	* term/pslatex.trm (EPSLATEX_linetype): Step back from over-general test
	for unnecessary linetype change.  Forward it to PS_linetype for the
	actual decision. Without this, a pure linewidth change or a pure
	dash style change are incorrectly ignored.
	Bugfix.

2006-07-12  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* demo/Makefile.am.in:
	* demo/random.dem:
	* demo/vector.dem:
	Rename temporary *.dat files to *.tmp to prevent them to be included by
	'make dist'.

2006-07-11  Ethan A Merritt <merritt@u.washington.edu>

	* term/pslatex.trm (EPSLATEX_set_color): Restore support for color
	text set using fractional palette values. If the terminal is in mono
	mode, or has the blacktext option, the fractional text color remains
	a pure grayscale.
	Bug #1517932

2006-07-11  Per Persson  <persquare@mac.com>
